--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+    height: 100vh;
+    width: 100vw;
+    background-color: blueviolet;
+    display: flex;
+    padding: 3vh 3vw;
+}
+
+.right {
+    width: 25vw;
+    height: 94vh;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.7) 8px 8px 8px;
+    background-color: #999;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.fp {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.left {
+    width: 67vw;
+    margin-right: 2vw;
+    height: 94vh;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.7) -8px 8px 8px;
+    background-color: #fff;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+}
+
+.left div {
+    height: 100%;
 }
