--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 
 .App {
@@ -15,7 +16,7 @@
     height: 94vh;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.7) 8px 8px 8px;
-    background-color: #999;
+    background-color: #fff;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -26,6 +27,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    height: 30vh;
 }
 
 .left {
